404 page css design

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <header>
         <div class="container">
             <nav class="head_content">
-                <div class="c_logo">
-                    <a href="index.html"><h2>Zakir <span class="c_blue">Soft</span></h2></a>
+                <div class="logo">
+                    <a href="index.html"><img src="assets/images/logo/1.png" alt="logo"></a>
                 </div>
                 <div class="menu">
                     <ul class="m_bar">
