--- a/work.html
+++ b/work.html
@@ -15,8 +15,8 @@
     <header>
         <div class="container">
             <nav class="head_content">
-                <div class="c_logo">
-                    <h2>Zakir <span class="c_blue">Soft</span></h2>
+                <div class="logo">
+                    <a href="index.html"><img src="assets/images/logo/1.png" alt="logo"></a>
                 </div>
                 <div class="menu">
                     <ul class="m_bar">
@@ -68,37 +68,41 @@
             </div>
             <div class="work_content">
                 <div class="container">
-                    <div class="row">
+                    <div class="row border-bottom">
                         <div class="col-md-6">
-                            These all our team member recent work
+                            <div class="tab-text">
+                                <p>These all our team member recent work</p>
+                            </div>
                         </div>
                         <div class="col-md-6">
-                            <ul class="nav nav-pills mb-5 mr-auto" id="pills-tab" role="tablist">
-                                <li class="nav-item">
-                                    <a class="nav-link   active" id="pills-all-tab" data-toggle="pill" href="#pills-all"
-                                        role="tab" aria-controls="pills-all" aria-selected="true">all</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" id="pills-frontend-tab" data-toggle="pill"
-                                        href="#pills-frontend" role="tab" aria-controls="pills-frontend"
-                                        aria-selected="false">frontend</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" id="pills-backend-tab" data-toggle="pill" href="#pills-backend"
-                                        role="tab" aria-controls="pills-backend" aria-selected="false">backend</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" id="pills-ui-tab" data-toggle="pill" href="#pills-ui" role="tab"
-                                        aria-controls="pills-ui" aria-selected="false">UI/UX</a>
-                                </li>
-                            </ul>
+                            <div class="work_tab">
+                                <ul class="nav nav-pills mr-auto" id="pills-tab" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link   active" id="pills-all-tab" data-toggle="pill" href="#pills-all"
+                                            role="tab" aria-controls="pills-all" aria-selected="true">all</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" id="pills-frontend-tab" data-toggle="pill"
+                                            href="#pills-frontend" role="tab" aria-controls="pills-frontend"
+                                            aria-selected="false">frontend</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" id="pills-backend-tab" data-toggle="pill" href="#pills-backend"
+                                            role="tab" aria-controls="pills-backend" aria-selected="false">backend</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" id="pills-ui-tab" data-toggle="pill" href="#pills-ui" role="tab"
+                                            aria-controls="pills-ui" aria-selected="false">UI/UX</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                     <!-- Tab content will appear here -->
                     <div class="tab-content pt-5" id="pills-tabContent">
                         <div class="tab-pane fade show active" id="pills-all" role="tabpanel"
                             aria-labelledby="pills-all-tab">
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -115,7 +119,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -132,7 +136,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -149,7 +153,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -166,7 +170,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -186,7 +190,7 @@
                         </div>
                         <div class="tab-pane fade" id="pills-frontend" role="tabpanel"
                             aria-labelledby="pills-frontend-tab">
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -203,7 +207,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -220,7 +224,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -237,7 +241,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -254,7 +258,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -275,7 +279,7 @@
                         <div class="tab-pane fade" id="pills-backend" role="tabpanel"
                             aria-labelledby="pills-backend-tab">
 
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -292,7 +296,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -309,7 +313,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -326,7 +330,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -343,7 +347,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -364,7 +368,7 @@
                         </div>
                         <div class="tab-pane fade" id="pills-ui" role="tabpanel" aria-labelledby="pills-ui-tab">
 
-                            <div class="row">
+                            <div class="row align-items-center">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -381,7 +385,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -398,7 +402,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -415,7 +419,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -432,7 +436,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row align-items-center">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
