--- a/404.html
+++ b/404.html
@@ -16,8 +16,8 @@
     <header>
         <div class="container">
             <nav class="head_content">
-                <div class="c_logo">
-                    <h2>Zakir <span class="c_blue">Soft</span></h2>
+                <div class="logo">
+                    <a href="index.html"><img src="assets/images/logo/1.png" alt="logo"></a>
                 </div>
                 <div class="menu">
                     <ul class="m_bar">
@@ -61,18 +61,18 @@
     <!-- header section end -->
 
     <!-- 404 section start -->
-    <section id="404_area" class="none">
+    <section id="error_area" class="none text-center">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="404_wrapper">
-                        <img src="assets/images/404.svg" alt="404 images">
-                    </div>
-                    <div class="section_title">
-                        <h2>Oops, The page you are looking is not found</h2>
-                    </div>
-                    <div class="404_button">
-                        <a class="btn" href="#">Back to home</a>
+                    <div class="error_wrapper">
+                        <div class="404_img">
+                            <img src="assets/images/404.svg" alt="404 images">
+                        </div>
+                            <h2>Oops, The page you are looking is not found</h2>
+                        <div class="404_button">
+                            <a class="btn" href="#">Back to home</a>
+                        </div>
                     </div>
                     <div class="bottom">
                         <div class="container">
