--- a/join-us-contact.html
+++ b/join-us-contact.html
@@ -16,8 +16,8 @@
     <header>
         <div class="container">
             <nav class="head_content">
-                <div class="c_logo">
-                    <h2>Zakir <span class="c_blue">Soft</span></h2>
+                <div class="logo">
+                    <a href="index.html"><img src="assets/images/logo/1.png" alt="logo"></a>
                 </div>
                 <div class="menu">
                     <ul class="m_bar">
