added work slider and fixed some banner section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <!-- Menus -->
     <div class="menu_content">
-        <div class="top">
+        <div class="top text-center">
             <div class="container">
                 <ul class="nav_links">
                     <li class="nav_items"><a href="index.html">Home</a></li>
@@ -83,13 +83,13 @@
     <!-- banner section end -->
 
     <!-- work section start -->
-    <section id="work" class="none d-none">
-        <div class="container">
+    <section id="work" class="none ">
+        <div class="container-fluid">
             <div class="row section_title">
                 <h2>our Work</h2>
             </div>
-            <div class=" project_slider">
-                <div class="slide_item row">
+            <div class="row project_slider">
+                <div class="slide_item col-12">
                     <div class="col-4">
                         <div class="slide_info">
                             <span class="p_type">Project type</span>
@@ -102,11 +102,97 @@
                     </div>
                     <div class="col-8">
                         <div class="project_img">
-                            <img src="assets/images/project-img/img-1.png" alt="project-img" class="img-fluid">
+                            <img src="assets/images/project-img/img-7.png" alt="project-img" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+                <div class="slide_item col-12">
+                    <div class="col-4">
+                        <div class="slide_info">
+                            <span class="p_type">Project type</span>
+                            <h3 class="p_title">Project Name</h3>
+                            <a class="v_project">
+                                <span>View Project</span>
+                                <img src="assets/images/Arrow-icon.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="project_img">
+                            <img src="assets/images/project-img/img-7.png" alt="project-img" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+                <div class="slide_item col-12">
+                    <div class="col-4">
+                        <div class="slide_info">
+                            <span class="p_type">Project type</span>
+                            <h3 class="p_title">Project Name</h3>
+                            <a class="v_project">
+                                <span>View Project</span>
+                                <img src="assets/images/Arrow-icon.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="project_img">
+                            <img src="assets/images/project-img/img-7.png" alt="project-img" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+                <div class="slide_item col-12">
+                    <div class="col-4">
+                        <div class="slide_info">
+                            <span class="p_type">Project type</span>
+                            <h3 class="p_title">Project Name</h3>
+                            <a class="v_project">
+                                <span>View Project</span>
+                                <img src="assets/images/Arrow-icon.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="project_img">
+                            <img src="assets/images/project-img/img-7.png" alt="project-img" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+                <div class="slide_item col-12">
+                    <div class="col-4">
+                        <div class="slide_info">
+                            <span class="p_type">Project type</span>
+                            <h3 class="p_title">Project Name</h3>
+                            <a class="v_project">
+                                <span>View Project</span>
+                                <img src="assets/images/Arrow-icon.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="project_img">
+                            <img src="assets/images/project-img/img-7.png" alt="project-img" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+                <div class="slide_item col-12">
+                    <div class="col-4">
+                        <div class="slide_info">
+                            <span class="p_type">Project type</span>
+                            <h3 class="p_title">Project Name</h3>
+                            <a class="v_project">
+                                <span>View Project</span>
+                                <img src="assets/images/Arrow-icon.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="project_img">
+                            <img src="assets/images/project-img/img-7.png" alt="project-img" class="img-fluid">
                         </div>
                     </div>
                 </div>
             </div>
+            <h4 class="drag_text">Drag</h4>
         </div>
     </section>
     <!-- work section end -->
