images compressor and some file modifi

--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
                         <p>Integer at faucibus urna. Nullam condimentum leo id elit sagittis auctor. Curabitur elementum nunc a leo
                             imperdiet, nec elementum diam elementum. Etiam elementum euismod commodo. Proin eleifend eget quam ut
                             efficitur. Mauris a accumsan mauris.</p>
-                        <a href="#" class="btn">Join Our Team</a>
+                        <a href="#" class="button">Join Our Team</a>
                     </div>
                 </div>
                 <div class="col-md-6">
