--- a/index.html
+++ b/index.html
@@ -220,7 +220,10 @@
                     <img src="assets/images/partner/amazon.png" alt="brand logo">
                 </div>
                 <div class="single_brand">
-                    <img src="assets/images/partner/Invision.png" alt="brand logo">
+                    <img src="assets/images/partner/Firefox.png" alt="brand logo">
+                </div>
+                <div class="single_brand">
+                    <img src="assets/images/partner/Apple icon.png" alt="brand logo">
                 </div>
             </div>
         </div>
@@ -232,10 +235,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="section-title">
+                    <div class="section_title tes-title text-center">
                         <h2>Testimonials</h2>
                     </div>
-                    <div class="testimonial-active">
+                    <div class="testimonial-active text-center">
                         <div class="single-testimonial">
                             <p>"Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum
                                 justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum
