--- a/work.html
+++ b/work.html
@@ -368,7 +368,7 @@
                         </div>
                         <div class="tab-pane fade" id="pills-ui" role="tabpanel" aria-labelledby="pills-ui-tab">
 
-                            <div class="row align-items-center">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -385,7 +385,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -402,7 +402,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -419,7 +419,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
@@ -436,7 +436,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center">
+                            <div class="row align-items-center mb-30">
                                 <div class="col-4">
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
