--- a/details.html
+++ b/details.html
@@ -117,9 +117,9 @@
                             <p class="pt-100">mattis est. Nullam mattis mauris quis massa consectetur dapibus. Nam ac
                                 iaculis magna. Sed eget diam mi. Sed id quam et purus luctus pretium.</p>
                         </div>
-                        <div class="project-btn">
-                            <a class="btn" href="#">View Project on live</a>
-                            <a class="btn" href="#">View Project on live</a>
+                        <div class="project-button">
+                            <a class="button" href="#">View Project on live</a>
+                            <a class="button" href="#">View Project on live</a>
                         </div>
                     </div>
                 </div>
