--- a/join-us.html
+++ b/join-us.html
@@ -72,8 +72,8 @@
                             </div>
                         </div>
                         <div class="col-6">
-                            <div class="join-designer-btn">
-                                <a class="btn" href="#">I want this position</a>
+                            <div class="join-designer-button">
+                                <a class="button" href="#">I want this position</a>
                             </div>
                         </div>
                     </div>
@@ -85,8 +85,8 @@
                             </div>
                         </div>
                         <div class="col-6">
-                            <div class="join-designer-btn">
-                                <a class="btn" href="#">I want this position</a>
+                            <div class="join-designer-button">
+                                <a class="button" href="#">I want this position</a>
                             </div>
                         </div>
                     </div>
@@ -98,8 +98,8 @@
                             </div>
                         </div>
                         <div class="col-6">
-                            <div class="join-designer-btn">
-                                <a class="btn" href="#">I want this position</a>
+                            <div class="join-designer-button">
+                                <a class="button" href="#">I want this position</a>
                             </div>
                         </div>
                     </div>
