modified  menu footer and main footer

--- a/index.html
+++ b/index.html
@@ -43,15 +43,17 @@
         </div>
         <div class="bottom">
             <div class="container">
-                <ul class="social_links">
-                    <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                    <li><a href="#"><i class="fab fa-github"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                </ul>
+                <div>
+                    <ul class="social_links">
+                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
+                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fab fa-github"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
                 <div class="c_rights">
                     <h5>&copy; 2020 - Zakirsoft</h5>
                 </div>
@@ -93,8 +95,8 @@
                     <div class="col-4">
                         <div class="slide_info">
                             <span class="p_type">Project type</span>
-                            <h3 class="p_title">Project Name</h3>
-                            <a class="v_project">
+                            <h3 class="p_title">Project name</h3>
+                            <a class="v_project" href="#">
                                 <span>View Project</span>
                                 <img src="assets/images/Arrow-icon.png" alt="">
                             </a>
@@ -110,8 +112,8 @@
                     <div class="col-4">
                         <div class="slide_info">
                             <span class="p_type">Project type</span>
-                            <h3 class="p_title">Project Name</h3>
-                            <a class="v_project">
+                            <h3 class="p_title">Project name</h3>
+                            <a class="v_project" href="#">
                                 <span>View Project</span>
                                 <img src="assets/images/Arrow-icon.png" alt="">
                             </a>
@@ -127,8 +129,8 @@
                     <div class="col-4">
                         <div class="slide_info">
                             <span class="p_type">Project type</span>
-                            <h3 class="p_title">Project Name</h3>
-                            <a class="v_project">
+                            <h3 class="p_title">Project name</h3>
+                            <a class="v_project" href="#">
                                 <span>View Project</span>
                                 <img src="assets/images/Arrow-icon.png" alt="">
                             </a>
@@ -144,8 +146,8 @@
                     <div class="col-4">
                         <div class="slide_info">
                             <span class="p_type">Project type</span>
-                            <h3 class="p_title">Project Name</h3>
-                            <a class="v_project">
+                            <h3 class="p_title">Project name</h3>
+                            <a class="v_project" href="#">
                                 <span>View Project</span>
                                 <img src="assets/images/Arrow-icon.png" alt="">
                             </a>
@@ -161,8 +163,8 @@
                     <div class="col-4">
                         <div class="slide_info">
                             <span class="p_type">Project type</span>
-                            <h3 class="p_title">Project Name</h3>
-                            <a class="v_project">
+                            <h3 class="p_title">Project name</h3>
+                            <a class="v_project" href="#">
                                 <span>View Project</span>
                                 <img src="assets/images/Arrow-icon.png" alt="">
                             </a>
@@ -178,8 +180,8 @@
                     <div class="col-4">
                         <div class="slide_info">
                             <span class="p_type">Project type</span>
-                            <h3 class="p_title">Project Name</h3>
-                            <a class="v_project">
+                            <h3 class="p_title">Project name</h3>
+                            <a class="v_project" href="#">
                                 <span>View Project</span>
                                 <img src="assets/images/Arrow-icon.png" alt="">
                             </a>
@@ -319,11 +321,11 @@
     <!-- testimonial section start -->
     <section id="testimonial-area" class="none">
         <div class="container">
+            <div class="row section_title">
+                <h2>Testimonials</h2>
+            </div>
             <div class="row">
                 <div class="col-md-12">
-                    <div class="section_title tes-title text-center">
-                        <h2>Testimonials</h2>
-                    </div>
                     <div class="testimonial-active text-center">
                         <div class="single-testimonial">
                             <p>"Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum
@@ -357,6 +359,13 @@
                             <span>Frank Wagner</span>
                             <h2>CEO of Invision</h2>
                         </div>
+
+                        <div class="arrow_prev">
+                            <span>previous Clients</span>
+                        </div>
+                        <div class="arrow_next">
+                            <span>Next Clients</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -365,11 +374,11 @@
     <!-- testimonial section end -->
 
     <!-- footer section start -->
-    <footer id="footer-area" class="none">
+    <footer id="footer_area" class="none">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="footer-menu">
+                    <div class="footer_menu">
                         <span>Quick Link</span>
                         <ul class="nav_links">
                             <li class="nav_items"><a href="index.html">Home</a></li>
@@ -379,15 +388,15 @@
                             <li class="nav_items"><a href="join-us.html">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="connect-imfo">
+                    <div class="connect_info">
                         <h4>Connect With us</h4>
                         <p>In consequat, quam id sodales hendrerit, eros mi molestie leo, nec lacinia risus neque
                             tristique augue. Proin tempus urna vel congue elementum.
                         </p>
-                        <span>Zakirsoft@outlook.com</span>
+                        <span class="email">Zakirsoft@outlook.com</span>
                     </div>
-                    <div class="solial-link">
-                        <ul>
+                    <div>
+                        <ul class="social_links">
                             <li><a href="#"><i class="fab fa-behance"></i></a></li>
                             <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
                             <li><a href="#"><i class="fab fa-github"></i></a></li>
@@ -399,7 +408,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <div class="copyright-text">
+                    <div class="copyright_text">
                         <p>&#169; 2020 - Zakirsoft</p>
                     </div>
                 </div>
