--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="banner" class="none">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 order-2 order-lg-0">
+                <div class="col-xl-7 order-2 order-xl-0">
                     <div class="banner_wrapper">
                         <h2>We are here to <br> grow your <br><span class="text_stroke">Business.</span> </h2>
                         <p>Curabitur vulputate arcu odio, ac facilisis diam accumsan ut. Ut imperdiet et leo in
@@ -74,7 +74,7 @@
                         <a class="button" href="#">View Projects</a>
                     </div>
                 </div>
-                <div class="col-lg-5 order-1 order-lg-0">
+                <div class="col-xl-5 order-1 order-xl-0">
                     <div class="banner_img">
                         <img src="assets/images/Inllustration.svg" alt="Ilustrator-img">
                     </div>
@@ -324,51 +324,44 @@
             <div class="row section_title">
                 <h2>Testimonials</h2>
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="testimonial-active text-center">
-                        <div class="single-testimonial">
-                            <p>"Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum
-                                justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum
-                                purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et
-                                scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."</p>
-                            <span>Frank Wagner</span>
-                            <h2>CEO of Invision</h2>
-                        </div>
-                        <div class="single-testimonial">
-                            <p>"Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum
-                                justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum
-                                purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et
-                                scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."</p>
-                            <span>Frank Wagner</span>
-                            <h2>CEO of Invision</h2>
-                        </div>
-                        <div class="single-testimonial">
-                            <p>"Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum
-                                justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum
-                                purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et
-                                scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."</p>
-                            <span>Frank Wagner</span>
-                            <h2>CEO of Invision</h2>
-                        </div>
-                        <div class="single-testimonial">
-                            <p>"Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum
-                                justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum
-                                purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et
-                                scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."</p>
-                            <span>Frank Wagner</span>
-                            <h2>CEO of Invision</h2>
-                        </div>
-
-                        <div class="arrow_prev">
-                            <span>previous Clients</span>
-                        </div>
-                        <div class="arrow_next">
-                            <span>Next Clients</span>
-                        </div>
-                    </div>
+          <div class="row testimonial_slider">
+              <div class="slide_item">
+                <div class="content_text">
+                    "Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."
                 </div>
-            </div>
+                <h3 class="client_name">Frank Wagner</h3>
+                <span class="client_position">CEO of Invision</span>
+              </div>
+              <div class="slide_item">
+                <div class="content_text">
+                    "Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."
+                </div>
+                <h3 class="client_name">Frank Wagner</h3>
+                <span class="client_position">CEO of Invision</span>
+              </div>
+              <div class="slide_item">
+                <div class="content_text">
+                    "Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."
+                </div>
+                <h3 class="client_name">Frank Wagner</h3>
+                <span class="client_position">CEO of Invision</span>
+              </div>
+              <div class="slide_item">
+                <div class="content_text">
+                    "Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."
+                </div>
+                <h3 class="client_name">Frank Wagner</h3>
+                <span class="client_position">CEO of Invision</span>
+              </div>
+              <div class="slide_item">
+                <div class="content_text">
+                    "Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."
+                </div>
+                <h3 class="client_name">Frank Wagner</h3>
+                <span class="client_position">CEO of Invision</span>
+              </div>
+              
+          </div>
         </div>
     </section>
     <!-- testimonial section end -->
